--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,15 @@
     "private": true,
     "dependencies": {
         "axios": "^0.18.0",
-        "bootstrap": "^4.3.1",
+        "bootstrap": "^4.5.0",
+        "mdbreact": "^4.27.0",
         "react": "^16.8.6",
+        "react-bootstrap": "^1.0.1",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.0",
-        "react-scripts": "3.0.1",
+        "react-scripts": "^3.4.1",
         "react-table": "^6.10.0",
+        "reactjs-popup": "^1.5.0",
         "styled-components": "^4.2.0"
     },
     "scripts": {
