--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,9 @@
         "reactjs-popup": "^1.5.0",
         "styled-components": "^4.2.0"
     },
+    "proxy": "http://localhost:4000",
     "scripts": {
-        "start": "PORT=8000 react-scripts start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
@@ -28,6 +29,7 @@
     "eslintConfig": {
         "extends": "react-app"
     },
+    
     "browserslist": {
         "production": [
             ">0.2%",
