--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "server.js",
-	"scripts": {
+  "scripts": {
     "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "mongoose": "^5.7.5"
   },
