--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "build": "cd client && npm run build",
+    "build": "webpack --mode production",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "start": "node server.js",
@@ -18,5 +18,13 @@
     "express": "^4.16.4",
     "mongoose": "^5.7.5"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:4000",
+  "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "file-loader": "^6.0.0",
+    "url-loader": "^4.1.0"
+  }
 }
